--- a/projectstyle.css
+++ b/projectstyle.css
@@ -51,10 +51,11 @@ body {
 }
 
 h1 {
-    font-family: 'Kalam', cursive;
+    font-family: 'Gaegu', cursive;
+    letter-spacing: -0.1rem;
     color: #E33800;
     font-weight: bold;
-    font-size: 44px;
+    font-size: 54px;
 }
 
 hr {
