--- a/pagestyle.css
+++ b/pagestyle.css
@@ -30,9 +30,14 @@ button.navbar-toggler.navbar-toggler-right {
     border-bottom: 3px solid #3d3d3d;
 }
 
+
+#jumbo-intro {
+    background-color: white;
+}
+
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     color: #3d3d3d;
     overflow-x: hidden;
@@ -46,61 +51,23 @@ body {
     height: 1rem;
 }
 
-#intro-section {
-    background-color: #ffffff;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 24px;
-}
-
 h1 {
     font-family: 'Lora', serif;
-    color: #d8574a;
-    font-weight: 400;
+    color: #707070;
     font-size: 48px;
-    margin-bottom: -0.2rem;
+    font-weight: 400;
 }
 
-.title:hover {
-    transform: scale(1.03);
+hr {
+    border-top: 0.1rem solid #d8574a;
 }
 
-h2 {
-    font-family: 'Lora', serif;
-    color: #707070;
-    font-weight: 500;
-    font-size: 28px;
-    margin-bottom: 1rem;
-}
-
-
-.card:hover {
-    transform: scale(1.03);
-}
-
-.card-body {
-    margin: -0.5rem;
-}
-
-h3 {
+#info {
     font-family: 'Source Sans Pro', sans-serif;
-    color: #707070;
-    font-size: 22px;
-    font-weight: 600;
+    color: #3d3d3d;
+    font-weight: 400;
+    font-size: 20px;
 }
-
-
-#header-container {
-    padding-top: 0rem;
-    padding-bottom: 0rem;
-    background-color: #ffffff;
-}
-
-h4 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 21px;
-    font-weight: 600;
-}
-
 
 a {
     text-decoration: none;
@@ -116,23 +83,76 @@ a:hover {
     text-decoration: underline;
 }
 
+
+ul {
+    display:inline-block;
+    vertical-align:middle;
+}
+
+h2 {
+    font-family: 'Lora', serif;
+    color: #707070;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+h3 {
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #707070;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+#imp {
+    font-weight: 600;
+    background-color: #ffe0d9;
+}
+
+ #second-para {
+     margin-top: -0.5rem;
+ }
+
+ #list-spacing {
+    margin-top: 0.5rem;
+ }
+
+.figure-caption {
+     font-size: 14px;
+ }
+
+.card:hover {
+    transform: scale(1.03);
+}
+
+.card-body {
+    margin-bottom: -1rem;
+}
+
 .card {
     border: none;
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
 }
 
-.card-img-top {
-    border-bottom: 0.5px solid #aeaeae;
+
+.card-text {
+    font-size: 16px;
+}
+
+.quote {
+    font-family: 'Lora', serif;
+    color: #707070;
+    font-size: 21px;
+    font-weight: 400;
 }
 
 #page-footer {
-    background-color: white;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin: 0px;
-}
+     background-color: white;
+     padding-top: 1rem;
+     padding-bottom: 1rem;
+     margin: 0px;
+ }
 
-#text-footer {
-    margin: 0px;
-    font-size: 16px;
-}
+ #text-footer {
+     margin: 0px;
+     font-size: 16px;
+ }
