--- a/pagestyle.css
+++ b/pagestyle.css
@@ -1,8 +1,7 @@
 
 .navbar {
-    background-color: white;
-    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
-    height: 3rem;
+  background-color: white;
+  height: 3.5rem;
 }
 
 .navbar-collapse {
@@ -10,8 +9,8 @@
 }
 
 button.navbar-toggler.navbar-toggler-right {
-    border-radius: 0px;
-    border-color: #707070;
+  border-radius: 0px;
+  border-color: #A7A4A3;
 }
 
 .navbar-light span.navbar-toggler-icon {
@@ -20,14 +19,16 @@ button.navbar-toggler.navbar-toggler-right {
 }
 
 .nav-link {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;
-    color: #707070;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: #A7A4A3;
 }
 
 .navbar .navbar-collapse .navbar-nav li > a:hover {
-    font-size: 19px;
-    border-bottom: 3px solid #3d3d3d;
+  border-bottom: 2px solid #3d3d3d;
+  padding-bottom: 0.2rem;
+  transform: scale(1.05);
 }
 
 
@@ -52,22 +53,17 @@ body {
 }
 
 h1 {
-    font-family: 'Lora', serif;
-    color: #707070;
-    font-size: 48px;
-    font-weight: 400;
+    font-family:  'Fredoka', sans-serif;
+    color: #A7A4A3;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 0.25rem;
 }
 
 hr {
-    border-top: 0.1rem solid #d8574a;
+    border-top: 0.125rem solid #d8574a;
 }
 
-#info {
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #3d3d3d;
-    font-weight: 400;
-    font-size: 20px;
-}
 
 a {
     text-decoration: none;
@@ -90,22 +86,24 @@ ul {
 }
 
 h2 {
-    font-family: 'Lora', serif;
-    color: #707070;
-    font-size: 24px;
-    font-weight: 400;
+    font-family: 'Fredoka', sans-serif;
+    color: #A7A4A3;
+    font-size: 22px;
+    font-weight: 500;
 }
 
 h3 {
     font-family: 'Source Sans Pro', sans-serif;
-    color: #707070;
-    font-size: 20px;
+    color: #3d3d3d;
+    font-size: 19px;
     font-weight: 600;
+    margin-bottom: 0.25rem;
 }
+
 
 #imp {
     font-weight: 600;
-    background-color: #ffe0d9;
+    background-color: #ffe0d9bb;
 }
 
  #second-para {
@@ -130,12 +128,18 @@ h3 {
 
 .card {
     border: none;
-    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
 }
 
 
+.card-img-top {
+    border-radius: 15px 15px 0px 0px;
+    border-bottom: 0.5px solid #A7A4A345;
+}
+
 .card-text {
-    font-size: 16px;
+    padding-bottom: 0.75rem;
 }
 
 .quote {
@@ -145,14 +149,24 @@ h3 {
     font-weight: 400;
 }
 
-#page-footer {
-     background-color: white;
-     padding-top: 1rem;
-     padding-bottom: 1rem;
-     margin: 0px;
- }
+.screen {
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
 
- #text-footer {
-     margin: 0px;
-     font-size: 16px;
- }
+.profile {
+  border-radius: 15px;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+#page-footer {
+    background-color: #A7A4A345;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    margin: 0px;
+}
+
+#text-footer {
+    margin: 0px;
+}
