--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 
 .navbar {
     background-color: white;
-    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
-    height: 3rem;
+    height: 3.5rem;
 }
 
 .navbar-collapse {
@@ -11,7 +10,7 @@
 
 button.navbar-toggler.navbar-toggler-right {
     border-radius: 0px;
-    border-color: #707070;
+    border-color: #A7A4A3;
 }
 
 .navbar-light span.navbar-toggler-icon {
@@ -22,12 +21,13 @@ button.navbar-toggler.navbar-toggler-right {
 .nav-link {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 600;
-    color: #707070;
+    color: #A7A4A3;
 }
 
 .navbar .navbar-collapse .navbar-nav li > a:hover {
-    font-size: 19px;
-    border-bottom: 3px solid #3d3d3d;
+    border-bottom: 2px solid #3d3d3d;
+    padding-bottom: 0.2rem;
+    transform: scale(1.05);
 }
 
 body {
@@ -49,43 +49,56 @@ body {
 #intro-section {
     background-color: #ffffff;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 24px;
+    font-size: 22px;
+    padding-bottom: 2rem;
+}
+
+.giffy {
+  padding-top: 2rem;
 }
 
 h1 {
-    font-family: 'Lora', serif;
+    font-family: 'Fredoka', sans-serif;
     color: #d8574a;
-    font-weight: 400;
-    font-size: 48px;
-    margin-bottom: -0.2rem;
-}
-
-.title:hover {
-    transform: scale(1.03);
-}
-
-h2 {
-    font-family: 'Lora', serif;
-    color: #707070;
-    font-weight: 500;
-    font-size: 28px;
+    font-weight: 600;
+    font-size: 32px;
+    margin-top: -0.875rem;
     margin-bottom: 1rem;
 }
 
+.title:hover {
+    transform: scale(1.015);
+    text-shadow: 1px 1px 1px rgba(216, 87, 74, 0.5)
+;
+}
+
+h2 {
+    font-family: 'Fredoka', sans-serif;
+    color: #A7A4A3;
+    font-weight: 600;
+    font-size: 28px;
+}
 
 .card:hover {
     transform: scale(1.03);
 }
 
-.card-body {
-    margin: -0.5rem;
-}
+
 
 h3 {
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #707070;
-    font-size: 22px;
-    font-weight: 600;
+    font-family: 'Fredoka', sans-serif;
+    color: #A7A4A3;
+    font-size: 21px;
+    font-weight: 500;
+}
+
+.card-title {
+  margin-bottom: 0.75rem;
+  margin-top: -0.15rem;
+}
+
+.card-text {
+    margin: -0.25rem -0.25rem -0.25rem -0.25rem;
 }
 
 
@@ -94,13 +107,6 @@ h3 {
     padding-bottom: 0rem;
     background-color: #ffffff;
 }
-
-h4 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 21px;
-    font-weight: 600;
-}
-
 
 a {
     text-decoration: none;
@@ -118,21 +124,25 @@ a:hover {
 
 .card {
     border: none;
-    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    margin-left: 0.375rem;
+    margin-right: 0.375rem;
 }
 
 .card-img-top {
-    border-bottom: 0.5px solid #aeaeae;
+    border-radius: 15px 15px 0px 0px;
+    border-bottom: 0.5px solid #A7A4A3;
 }
 
 #page-footer {
-    background-color: white;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    background-color: #A7A4A345;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
     margin: 0px;
 }
 
 #text-footer {
     margin: 0px;
-    font-size: 16px;
+    font-size: 18px;
 }
