--- a/pagestyle.css
+++ b/pagestyle.css
@@ -85,6 +85,7 @@ ul {
     vertical-align:middle;
 }
 
+
 h2 {
     font-family: 'Fredoka', sans-serif;
     color: #A7A4A3;
@@ -95,8 +96,8 @@ h2 {
 h3 {
     font-family: 'Source Sans Pro', sans-serif;
     color: #3d3d3d;
-    font-size: 19px;
-    font-weight: 600;
+    font-size: 18.5px;
+    font-weight: 550;
     margin-bottom: 0.25rem;
 }
 
@@ -164,6 +165,7 @@ h3 {
     background-color: #A7A4A345;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+    bottom: 0;
     margin: 0px;
 }
 
